# Dice

./: .gitignore  LICENSE.md  README.md
app/: Cargo.toml  Makefile.toml  README.md  build.rs
app/assets/: dice.als  dice.amxd  dice.decode.js  dice.encode.js  dice.maxhelp  dice.txt
app/src/: lib.rs  macros.rs  matrix.rs  onnx.rs
datasets/: .gitignore  README.md  pyproject.toml
datasets/presets/: default.json
datasets/scripts/: dataset_visualisation.py  generate_datasets.py  midi_to_json.py
datasets/src/dice_datasets/: __init__.py  dataset.py  pattern.py  sequence.py
datasets/tests/: test_pattern.py  test_sequence.py
docs/: _config.yaml  getting-started.md  github.md  index.md  license.md
models/: .gitignore  README.md  experiments.json  pyproject.toml
models/scripts/: export_onnx.py  run_experiments.py  train_model.py
models/src/dice_models/: __init__.py  loss_functions.py  utils.py
models/src/dice_models/architectures/: __init__.py  autoencoder.py  unet.py
models/tests/: test_architectures.py  test_loss.py
