[package]
name = "dice"
version = "0.1.0"
authors = ["eilseq <tools@eilseq.com>"]
edition = "2018"

[lib]
name = "dice"
crate-type = ["cdylib"]

[dependencies]
median = { git = "https://github.com/eilseq/median.git", branch = "develop" }
wonnx = "0.5.1"
futures = "0.3.31"
maplit = "1.0"
rand = "0.8.5"

[profile.release]
lto = true
panic = "abort"
